JumpScript/tests/baselines/reference/templateStringInTaggedTemplate.errors.txt
tests/cases/conformance/es6/templates/templateStringInTaggedTemplate.jump(1,1): error TS2349: Cannot invoke an expression whose type lacks a call signature. Type 'String' has no compatible call signatures.


==== tests/cases/conformance/es6/templates/templateStringInTaggedTemplate.jump (1 errors) ====
    `I AM THE ${ `${ `TAG` } ` } PORTION`    `I ${ "AM" } THE TEMPLATE PORTION`
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2349: Cannot invoke an expression whose type lacks a call signature. Type 'String' has no compatible call signatures.